# CyclopsMIPS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg.json
.github/workflows/: build.yml
App/: CMakeLists.txt  main.cpp
App/include/: BrandAsset.h  ImGuiApp.h  TextureLoader.h  UI_Widgets.h
App/include/Cyclops/Platform/: OpenGLDebug.h
App/include/Cyclops/Utils/: PlatformUtils.h
App/resources/: resource.rc
App/src/: ImGuiApp.cpp  OpenGLDebug.cpp  PlatformUtils.cpp  TextureLoader.cpp  UI_ArchitectureWidget.cpp  UI_EditorWidget.cpp  UI_MemoryWidget.cpp  UI_PipelineWidget.cpp  UI_RegisterWidget.cpp  UI_SignalsWidget.cpp  UI_TerminalWidget.cpp  UI_Widgets.cpp
Core/: CMakeLists.txt
Core/include/Assembler/: Assembler.h  Parser.h
Core/include/Core/: ALU.h  Assembler.h  BTB.h  CPU.h  CyclopsPrint.h  DataMemory.h  Instruction.h  L1Cache.h  Logger.h  MemoryBus.h  OpCode.h  Parser.h  PipelineLatches.h  RegisterFile.h  SPSCQueue.h  State.h
Core/include/Cyclops/Core/: PlatformDetection.h
Core/src/: ALU.cpp  Assembler.cpp  CPU.cpp  DataMemory.cpp  MemoryBus.cpp  Parser.cpp  RegisterFile.cpp
Tests/: CMakeLists.txt  Test_GoldenMaster.cpp  Test_Hazards.cpp  Test_Instruction.cpp  Test_RegFile.cpp  bench_pipeline.cpp  test_alu.cpp  test_assembler.cpp  test_cpu.cpp  test_pipeline_mapping.cpp
tools/: bake_assets.py
